--- a/SurakshaWalt/src/main/resources/application.properties
+++ b/SurakshaWalt/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.password = Adarsh@1127
 spring.jpa.hibernate.ddl-auto = update
 spring.datasource.hikari.auto-commit=false
 
+socket.port=8000
+
 
 # jwt secret key
 
