--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,4 +15,4 @@ socket.port=8000
 
 jwt.secret=TmV3U2VjcmV0S2V5Rm9ySldUU2lnbmluZ1B1cnBvc2VzMTIzNDU2Nzg=
 
-gemini.api.key=AIzaSyAHBt9ucTANAXjMUif1Gqmiy0LVcaDEv2k
+gemini.api.key=******************************************************
